Fixing Grid Rows on small sizes

--- a/css/erima.css
+++ b/css/erima.css
@@ -3,9 +3,11 @@ body {
   font-family: "Noto Sans", helvetica, sans-serif;
   line-height: 1.5;
   padding: 5vw 5vh;
-  max-width: 80vw;
   margin: auto;
   background-color: hsl(150, 10%, 90%);
+}
+a {
+  color: hsl(280, 100%,30%);
 }
 
 p {
@@ -41,12 +43,14 @@ footer h1 {
   font-size: 1rem;
   text-decoration: underline;
 }
-
+.dialog-off-canvas-main-canvas nav ul,
+footer ul {
+    display: flex;
+    justify-content: space-evenly;
+}
 
 .dialog-off-canvas-main-canvas nav li,
-footer li {
-  margin: 2em 0;
-}
+footer li {}
 
 .dialog-off-canvas-main-canvas nav li:nth-child(1n),
 footer li:nth-child(1n) {
@@ -77,12 +81,12 @@ article > .hero img {
 }
 
 article header {
-  background-color: hsl(20, 100%, 70%);
+  background-color: hsl(20, 100%, 75%);
   font-size: 1.5rem;
 }
 
 article h2 {
-  background-color: hsl(200, 70%, 70%);
+  background-color: hsl(200, 70%, 75%);
   font-size: 1.2rem;
 }
 
@@ -91,6 +95,11 @@ article aside {
   font-size: 0.7em;
   padding: 2em;
   font-style:
+}
+
+article ul {
+  list-style-type: circle;
+  margin-left: 1em;
 }
 
 /*
@@ -102,20 +111,33 @@ these are styles for the topic at hand */
   display: grid;
   grid-template-columns: 3fr 9fr;
   grid-template-rows: repeat(auto, 1fr);
+  grid-template-areas:
+               "header"
+                "main"
+                "footer";
 }
 
 main {
   grid-column: 2 / span 2;
   grid-row: 2 / span 2;
+  grid-area: "main";
 }
 
 header {
   grid-column: 1 / span 2;
+  grid-area: "header";
 }
 
-nav,
 footer {
-  grid-column: 1 / span 1;
+  grid-area: "footer";
+}
+
+.dialog-off-canvas-main-canvas nav {
+  grid-row: 1 / span 1;
+}
+
+.dialog-off-canvas-main-canvas nav, footer {
+  grid-column: 1 / end;
 }
 
 article {
@@ -148,7 +170,7 @@ article img {
   grid-column: 1 / end;
 }
 article h2 {
-  grid-column: 1/ span 3;
+  grid-column: 1 / span 4;
 }
 article p {
   grid-column: 2 / span 3;
@@ -171,4 +193,22 @@ article article, article article article {
 
 article .embedded-entity {
   grid-column: 1/end;
+}
+
+@media screen and (min-width: 800px) {
+  body {
+      max-width: 80vw;
+  }
+  .dialog-off-canvas-main-canvas nav,
+  footer {
+    grid-column: 1 / span 1;
+    grid-row: auto;
+  }
+  .dialog-off-canvas-main-canvas nav ul, footer ul {
+    flex-direction: column;
+    align-content: space-evenly;
+  }
+  .dialog-off-canvas-main-canvas nav li, footer li {
+    margin: 2em 0;
+  }
 }
